--- a/index.html
+++ b/index.html
@@ -471,6 +471,59 @@
             <use href="./images/icons.svg#vector"></use>
           </svg>
         </button>
+        <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="modal-form" autocomplete="on">
+          <label class="modal-label">
+            <span class="modal-text">Ім'я</span>
+            <div class="modal-wrapper">
+              <input type="text" class="modal-input" name="username" required />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="modal-label">
+            <span class="modal-text">Телефон</span>
+            <div class="modal-wrapper">
+              <input
+                type="tel"
+                class="modal-input"
+                name="phone_number"
+                required
+              />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="modal-label">
+            <span class="modal-text">Пошта</span>
+            <div class="modal-wrapper">
+              <input type="email" class="modal-input" name="email" required />
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </label>
+          <label class="modal-label">
+            <span class="modal-text">Коментар</span>
+            <textarea
+              name="comment"
+              class="modal-comment"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+
+          <label class="modal-checkbox">
+            <input class="checkbox" type="checkbox" name="agreement" />
+            <svg class="checkbox-icon" width="16" height="15">
+              <use href="./images/icons.svg#check"></use>
+            </svg>
+            <span class="checkbox-text">Погоджуюся з розсилкою та приймаю</span>
+            <a href="#" class="checkbox-link">Умови договору</a>
+          </label>
+          <button type="submit" class="send-button button">Відправити</button>
+        </form>
       </div>
     </div>
 
