--- a/index.html
+++ b/index.html
@@ -460,6 +460,26 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-push">
+          <p class="footer-title-push">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="footer-push-btn button" type="submit">
+              Підписатися
+              <svg class="push-icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
