--- a/index.html
+++ b/index.html
@@ -495,16 +495,16 @@
         <form class="modal-form" autocomplete="on">
           <label class="modal-label">
             <span class="modal-text">Ім'я</span>
-            <div class="modal-wrapper">
+            <span class="modal-wrapper">
               <input type="text" class="modal-input" name="username" required />
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#person"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-label">
             <span class="modal-text">Телефон</span>
-            <div class="modal-wrapper">
+            <span class="modal-wrapper">
               <input
                 type="tel"
                 class="modal-input"
@@ -514,16 +514,16 @@
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#phone"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-label">
             <span class="modal-text">Пошта</span>
-            <div class="modal-wrapper">
+            <span class="modal-wrapper">
               <input type="email" class="modal-input" name="email" required />
               <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#email"></use>
               </svg>
-            </div>
+            </span>
           </label>
           <label class="modal-label">
             <span class="modal-text">Коментар</span>
